--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "heroku-postbuild": "cd frontend && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
   "keywords": [],
   "author": "",
@@ -18,7 +18,7 @@
     "express": "^4.17.2",
     "mongoose": "^6.2.1",
     "nanoid": "^3.3.0",
-    "node": "^17.4.0",
+    "node": "^16.14.0",
     "shortid": "^2.2.8",
     "valid-url": "^1.0.9"
   },
@@ -26,6 +26,6 @@
     "nodemon": "^2.0.15"
   },
   "engines": {
-    "node": "17.4.0"
+    "node": "16.14.0"
   }
 }
