--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "heroku-postbuild": "cd frontend && npm install --only=dev && npm install && npm run build"
+    "heroku-postbuild": "npm install"
   },
   "keywords": [],
   "author": "",
@@ -26,6 +26,7 @@
     "nodemon": "^2.0.15"
   },
   "engines": {
+    "npm": "8.1.2",
     "node": "16.14.0"
   }
 }
